   * ability to view a list of MP servers with the Join Game dialog
   * fixed blinking tooltips when clock is updated (bug #9209)
   * footsteps are now erased at the end of the unit's move
   * reduced "sea sickness" effect when scrolling at accelerated speed
   * allow to select item in menu with right-click 
   * right-click outside of a cancelable dialog to close it
 * Miscellaneous and bugfixes
   * fix bug #4299: word wrap for menus with very long option strings
   * various bugfixes and code cleanups
   * removed zipios support
   * poisonned/stoned text is properly centered again
   * fixed various bugs with stoned units, now no moves left and blind.
   * fixed a bug causing instantaneous move of unit when using acceleration
   * fixed briefly invisible unit when scrolling to show a move
   * fixed an invalid letter in the random winter scenario
   
Version 1.3.3:
 * campaigns:
   * Northern Rebirth
     * Completed Scenario 'Ray of Hope'.
   * Sceptre of Fire:
     * imported from Wescamp
   * Son of the Black Eye:
     * Merged into mainline for testing.
   * Descent into Darkness
     * added to the pack
     * new Troll Shaman graphics
   * Under the Burning Suns
     * new WML in first and second scenario
     * tweaked second scenario map
     * removed a bunch of custom units
     * removed a bunch of custom terrains
     * new playable unit in scenario 2
     * new dehydration logic in scenario 2
     * new ambush logic in scenario 2
     * new Troll Shaman graphics
   * The South Guard
     * improved Deoran graphics
   * The Rise of Wesnoth
     * new Wose Sapling, Warrior King graphics
 * graphics
   * the leader crown don't hide anymore the top of hp/xp bars (bug #9120)
   * better flag icons for the status bar
   * taller flags that don't get hidden behind units so easily
   * fixed some drawing glitches in the top row (bug #8739 and #8071)
   * it's now possible to zoom in till the theoretical minimum of 4 pixels
     per hex.