@@ -33,6 +33,8 @@ Version 1.3.3+svn:
    * reduced "sea sickness" effect when scrolling at accelerated speed
    * allow to select item in menu with right-click 
    * right-click outside of a cancelable dialog to close it
+   * added experimental new background read comment before draw_background()
+     in display.cpp
  * Miscellaneous and bugfixes
    * fix bug #4299: word wrap for menus with very long option strings
    * various bugfixes and code cleanups
